force-app/main/default/objects/Lead/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <label>Product Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Circle Account</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Payouts</fullName>
            </value>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>Yield</fullName>
            </value>
            <value>
                <fullName>Core API</fullName>
            </value>
            <value>
                <fullName>Passthrough Yield</fullName>
            </value>
            <value>
                <fullName>Business Accounts</fullName>
            </value>
            <value>
                <fullName>Marketplaces v2</fullName>
            </value>
            <value>
                <fullName>Cybavo VAULT</fullName>
            </value>
            <value>
                <fullName>Cybavo Cashflow Manager</fullName>
            </value>
            <value>
                <fullName>Cybavo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>