force-app/main/default/objects/Lead/fields/Qualtrics_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Qualtrics_First_Name__c</fullName>
    <label>Qualtrics First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>