force-app/main/default/objects/Lead/fields/Qualtrics_Region__c.field-meta.xml
<CustomField>
    <fullName>Qualtrics_Region__c</fullName>
    <label>Qualtrics Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>