force-app/main/default/objects/Lead/fields/Recent_Deal_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Recent_Deal_Close_Date__c</fullName>
    <label>Recent Deal Close Date</label>
    <type>Date</type>
</CustomField>