force-app/main/default/objects/Lead/fields/Sales_Do_Not_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sales_Do_Not_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Do Not Contact</label>
    <type>Checkbox</type>
</CustomField>