force-app/main/default/objects/Lead/fields/Salesloft_Sync_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Salesloft_Sync_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>field used to trigger a manual sync between Salesforce and Salesloft</description>
    <label>Salesloft Sync Trigger</label>
    <type>Checkbox</type>
</CustomField>