force-app/main/default/objects/Lead/fields/SDR_Owner__c.field-meta.xml
<CustomField>
    <fullName>SDR_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SDR Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads11</relationshipName>
    <type>Lookup</type>
</CustomField>