force-app/main/default/objects/Lead/fields/SDR_Owner_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>SDR_Owner_Is_Active__c</fullName>
    <formula>SDR_Owner__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDR Owner Is Active?</label>
    <type>Checkbox</type>
</CustomField>