force-app/main/default/objects/Lead/fields/SDR_Owner_text__c.field-meta.xml
<CustomField>
    <fullName>SDR_Owner_text__c</fullName>
    <description>This is used to get the text value to display in Salesloft</description>
    <formula>SDR_Owner__r.FirstName +&quot; &quot;+ SDR_Owner__r.LastName</formula>
    <label>SDR Owner (text)</label>
    <type>Text</type>
</CustomField>