force-app/main/default/objects/Lead/fields/SEN__c.field-meta.xml
<CustomField>
    <fullName>SEN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEN</label>
    <type>Checkbox</type>
</CustomField>