force-app/main/default/objects/Lead/fields/Specific_Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Specific_Use_Case__c</fullName>
    <description>Used for Circle Wallet Signing Service</description>
    <inlineHelpText>Populated by Wallet Signing Service form submission</inlineHelpText>
    <label>Specific Use Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cross-border Payment</fullName>
            </value>
            <value>
                <fullName>Global Dollar Access</fullName>
            </value>
            <value>
                <fullName>Crypto Capital Market</fullName>
            </value>
            <value>
                <fullName>Gaming</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>