force-app/main/default/objects/Lead/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <inlineHelpText>Refers to what stage the lead or contact is at in our pre-sales process.</inlineHelpText>
    <label>Lead Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Subscriber</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Researching</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Marketing Qualified</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Recycled - Not Ready</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Former Customer</fullName>
            </value>
            <value>
                <fullName>Terminated Customer</fullName>
            </value>
            <value>
                <fullName>Disqualified - Bad Fit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>