force-app/main/default/objects/Lead/fields/State_of_Incorporation_DNU__c.field-meta.xml
<CustomField>
    <fullName>State_of_Incorporation_DNU__c</fullName>
    <label>State of Incorporation_DNU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>