force-app/main/default/objects/Lead/fields/Temp_tag__c.field-meta.xml
<CustomField>
    <fullName>Temp_tag__c</fullName>
    <label>Temp Tag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>