force-app/main/default/objects/Lead/fields/Treasury_Meeting_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Treasury_Meeting_Disposition__c</fullName>
    <label>Treasury Meeting Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Did Not Show</fullName>
            </value>
            <value>
                <fullName>Not Ready</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>