force-app/main/default/objects/Lead/fields/Treasury_Owner__c.field-meta.xml
<CustomField>
    <fullName>Treasury_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Treasury Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads5</relationshipName>
    <type>Lookup</type>
</CustomField>