force-app/main/default/objects/Lead/fields/Treasury_Owner_Meeting_Link__c.field-meta.xml
<CustomField>
    <fullName>Treasury_Owner_Meeting_Link__c</fullName>
    <description>This is used to get the text value to display in Salesloft</description>
    <formula>Treasury_Owner__r.Meeting_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Treasury Owner Meeting Link</label>
    <type>Text</type>
</CustomField>