force-app/main/default/objects/Lead/fields/Treasury_Owner_text__c.field-meta.xml
<CustomField>
    <fullName>Treasury_Owner_text__c</fullName>
    <description>This is used to get the text value to display in Salesloft</description>
    <formula>Treasury_Owner__r.FirstName +&quot; &quot;+ Treasury_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Treasury Owner (text)</label>
    <type>Text</type>
</CustomField>