force-app/main/default/objects/Lead/fields/Type_of_trading_firm_Other__c.field-meta.xml
<CustomField>
    <fullName>Type_of_trading_firm_Other__c</fullName>
    <label>Type of Trading Firm - Other?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>