force-app/main/default/objects/Lead/fields/Unsubscribe_from_Salesloft_Email__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribe_from_Salesloft_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>field to track when people unsubscribe from Salesloft emails</description>
    <label>Unsubscribe from Salesloft Email</label>
    <type>Checkbox</type>
</CustomField>