force-app/main/default/objects/Lead/fields/USDC_Rewards_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>USDC_Rewards_Application_Status__c</fullName>
    <label>USDC Rewards Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>pendingsubmission</fullName>
                <label>Pending Customer</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>pendingreview</fullName>
                <label>Pending Review</label>
            </value>
            <value>
                <fullName>pendingrevision</fullName>
                <label>Pending Revision</label>
            </value>
            <value>
                <fullName>pendingsignature</fullName>
                <label>Pending Signature</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>