force-app/main/default/objects/Lead/fields/Users_Onboarding_Within_First_6_Months__c.field-meta.xml
<CustomField>
    <fullName>Users_Onboarding_Within_First_6_Months__c</fullName>
    <description>Used for Circle Wallet Signing Service</description>
    <inlineHelpText>Populated by Wallet Signing Service form submission</inlineHelpText>
    <label>Users Onboarding Within First 6 Months</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - 10,000</fullName>
            </value>
            <value>
                <fullName>10,001 - 100,000</fullName>
            </value>
            <value>
                <fullName>100,001 - 500,000</fullName>
            </value>
            <value>
                <fullName>500,001 - 1,000,000</fullName>
            </value>
            <value>
                <fullName>1,000,000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>