force-app/main/default/objects/Lead/fields/Verite_discovery_customer_base__c.field-meta.xml
<CustomField>
    <fullName>Verite_discovery_customer_base__c</fullName>
    <label>Verite discovery - customer base</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>