force-app/main/default/objects/Lead/fields/Verite_Discovery_lead_category__c.field-meta.xml
<CustomField>
    <fullName>Verite_Discovery_lead_category__c</fullName>
    <inlineHelpText>Are they are either an issuer of credentials, crypto wallet or defi protocol or dapp?</inlineHelpText>
    <label>Verite Discovery - lead category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Issuer</fullName>
            </value>
            <value>
                <fullName>Wallet</fullName>
            </value>
            <value>
                <fullName>Protocol/Dapp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>