force-app/main/default/objects/Lead/fields/Verite_discovery_project_status__c.field-meta.xml
<CustomField>
    <fullName>Verite_discovery_project_status__c</fullName>
    <inlineHelpText>Does the company have an active project (ie. working website or application)?</inlineHelpText>
    <label>Verite discovery - project status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>