force-app/main/default/objects/Lead/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <label>Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vertical</valueSetName>
    </valueSet>
</CustomField>