force-app/main/default/objects/Lead/fields/Weekly_Payments_Volume__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Payments_Volume__c</fullName>
    <label>Weekly Payments Volume</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Under $500,000</fullName>
            </value>
            <value>
                <fullName>$500,000 - $5,000,000</fullName>
            </value>
            <value>
                <fullName>More than $5,000,000</fullName>
            </value>
            <value>
                <fullName>We&apos;re just getting started</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>