force-app/main/default/objects/Lead/fields/What_do_you_want_to_work_on__c.field-meta.xml
<CustomField>
    <fullName>What_do_you_want_to_work_on__c</fullName>
    <label>What Do You Want to Work On?</label>
    <type>TextArea</type>
</CustomField>