force-app/main/default/objects/Lead/fields/What_regions_do_you_focus_on__c.field-meta.xml
<CustomField>
    <fullName>What_regions_do_you_focus_on__c</fullName>
    <label>What Regions Do You Focus On?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
            <value>
                <fullName>Oceania</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>