force-app/main/default/objects/Lead/fields/What_s_your_team_name__c.field-meta.xml
<CustomField>
    <fullName>What_s_your_team_name__c</fullName>
    <label>What&apos;s Your Team Name?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>