force-app/main/default/objects/Lead/fields/What_type_of_trading_firm_are_you__c.field-meta.xml
<CustomField>
    <fullName>What_type_of_trading_firm_are_you__c</fullName>
    <label>What Type of Trading Firm Are You?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OTC</fullName>
            </value>
            <value>
                <fullName>Prop desk</fullName>
            </value>
            <value>
                <fullName>Quant fund</fullName>
            </value>
            <value>
                <fullName>Hedge Fund</fullName>
            </value>
            <value>
                <fullName>Asset Manager</fullName>
            </value>
            <value>
                <fullName>Crypto Hedge Fund</fullName>
            </value>
            <value>
                <fullName>Exchange Platform</fullName>
            </value>
            <value>
                <fullName>Market Maker</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Venture Capital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>