force-app/main/default/objects/Lead/fields/What_you_want_to_work_on__c.field-meta.xml
<CustomField>
    <fullName>What_you_want_to_work_on__c</fullName>
    <label>What you want to work on?</label>
    <type>TextArea</type>
</CustomField>