force-app/main/default/objects/Lead/fields/When_will_your_product_go_live__c.field-meta.xml
<CustomField>
    <fullName>When_will_your_product_go_live__c</fullName>
    <description>Used for Circle Wallet Signing Service</description>
    <inlineHelpText>Populated by Wallet Signing Service form submission</inlineHelpText>
    <label>When will your product go live?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>It&apos;s Already Live</fullName>
            </value>
            <value>
                <fullName>&lt; 1 Month</fullName>
            </value>
            <value>
                <fullName>1-3 Months</fullName>
            </value>
            <value>
                <fullName>3+ Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>