force-app/main/default/objects/Lead/fields/Who_did_you_speak_with__c.field-meta.xml
<CustomField>
    <fullName>Who_did_you_speak_with__c</fullName>
    <label>Who Did You Speak With?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>