force-app/main/default/objects/Lead/fields/Why_USDC__c.field-meta.xml
<CustomField>
    <fullName>Why_USDC__c</fullName>
    <label>Why USDC?</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>