force-app/main/default/objects/Lead/fields/Withdrawal_Limit__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Limit__c</fullName>
    <label>Withdrawal Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>