force-app/main/default/objects/Lead/fields/X6sense_Account_6QA__c.field-meta.xml
<CustomField>
    <fullName>X6sense_Account_6QA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The 6QA status of the account for the product.
The values are either:
• 1 = 6QA
• 0= Not 6QA</inlineHelpText>
    <label>6sense Account 6QA</label>
    <type>Checkbox</type>
</CustomField>