force-app/main/default/objects/Lead/fields/X6sense_Account_6QA_Age_in_Days__c.field-meta.xml
<CustomField>
    <fullName>X6sense_Account_6QA_Age_in_Days__c</fullName>
    <inlineHelpText>Days the account has been in 6QA status.</inlineHelpText>
    <label>6sense Account 6QA Age in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>