force-app/main/default/objects/Lead/fields/X6sense_Account_6QA_End_Date__c.field-meta.xml
<CustomField>
    <fullName>X6sense_Account_6QA_End_Date__c</fullName>
    <inlineHelpText>The date the account was disqualified from 6QA status (YYYYMM-DD).</inlineHelpText>
    <label>6sense Account 6QA End Date</label>
    <type>Date</type>
</CustomField>