force-app/main/default/objects/Lead/fields/X6sense_Account_6QA_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>X6sense_Account_6QA_Start_Date__c</fullName>
    <inlineHelpText>The date the account qualified for 6QA status (YYYY-MM-DD).</inlineHelpText>
    <label>6sense Account 6QA Start Date</label>
    <type>Date</type>
</CustomField>