force-app/main/default/objects/Lead/fields/X6sense_Lead_Grade__c.field-meta.xml
<CustomField>
    <fullName>X6sense_Lead_Grade__c</fullName>
    <inlineHelpText>A measure of how engaged a person is with your first party sales and marketing tactics compared to previous buyers. Engagement activities of a person, along with historical opportunity history, are used by data science models to create this measure.</inlineHelpText>
    <label>6sense Lead Grade</label>
    <length>100</length>
    <type>Text</type>
</CustomField>