force-app/main/default/objects/Lead/fields/X6sense_Lead_Intent_Score__c.field-meta.xml
<CustomField>
    <fullName>X6sense_Lead_Intent_Score__c</fullName>
    <inlineHelpText>A measure, between 0 and 100, of how engaged a person is with your first party sales and marketing tactics compared to previous buyers. Engagement activities of a person, along with historical opportunity history, are used by data science models to create this measure.</inlineHelpText>
    <label>6sense Lead Intent Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>