force-app/main/default/objects/Lead/fields/X6sense_Lead_Profile_Score__c.field-meta.xml
<CustomField>
    <fullName>X6sense_Lead_Profile_Score__c</fullName>
    <inlineHelpText>A measure, between 0 and 100, of how similar the person is to your typical buyer or buying committee members. Demographic factors of a person record, along with historical opportunity history, are used by data science models to create this measure.</inlineHelpText>
    <label>6sense Lead Profile Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>