force-app/main/default/objects/Lead/fields/X6sense_Lead_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>X6sense_Lead_Update_Date__c</fullName>
    <inlineHelpText>The latest update date and time when 6sense Scores were updated.</inlineHelpText>
    <label>6sense Lead Update Date</label>
    <type>Date</type>
</CustomField>