force-app/main/default/objects/Lead/fields/Yield_Calculator_Results__c.field-meta.xml
<CustomField>
    <fullName>Yield_Calculator_Results__c</fullName>
    <label>Yield Calculator Results</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>