force-app/main/default/objects/Lead/fields/Yield_Disqualification_Reason__c.field-meta.xml
<CustomField>
    <fullName>Yield_Disqualification_Reason__c</fullName>
    <label>Yield Disqualification Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Does not meet minimum deposit requirement</fullName>
            </value>
            <value>
                <fullName>Does not meet location criteria</fullName>
            </value>
            <value>
                <fullName>Not an accredited investor</fullName>
            </value>
            <value>
                <fullName>Unsatisfied with rate options</fullName>
            </value>
            <value>
                <fullName>Unsatisfied with term options</fullName>
            </value>
            <value>
                <fullName>Compliance Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>