force-app/main/default/objects/Lead/fields/Yield_Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>Yield_Relationship_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Yield Relationship Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads3</relationshipName>
    <type>Lookup</type>
</CustomField>