force-app/main/default/objects/Lead/fields/Yield_Relationship_Manager_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Yield_Relationship_Manager_Assigned__c</fullName>
    <label>Yield Relationship Manager Assigned</label>
    <type>Date</type>
</CustomField>