force-app/main/default/objects/Lead/validationRules/Conversion_Criteria.validationRule-meta.xml
<ValidationRule>
    <fullName>Conversion_Criteria</fullName>
    <active>true</active>
    <description>Record must have Email Domain to convert.</description>
    <errorConditionFormula>AND(ISCHANGED(Status),
ISPICKVAL(Status,&quot;Qualified&quot;),
ISBLANK( Email_Domain__c )
)</errorConditionFormula>
    <errorMessage>Leads cannot be marked Qualified without Email Domain filled in. Please fill in the Email Domain field then convert the Lead.</errorMessage>
</ValidationRule>